<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ripple_sample_info" />

    <Button
        android:id="@+id/main_btn_start"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:text="@string/ripple_btn_b1"
        android:transitionName="@string/ripple_btn_shared"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginTop="40dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/ripple_btn_b2" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginTop="40dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:text="@string/ripple_btn_b3" />
</LinearLayout>
