<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/hello_world"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_b1"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginTop="40dp"
        android:text="@string/ripple_btn_b1"
        android:transitionName="@string/ripple_btn_shared"/>
</LinearLayout>